--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,6 +21,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 200px;
 }
 .nav-title {
     color: var(--Dark-01, #181818);
@@ -42,4 +43,9 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+
+/* Header Styles */
+.header {
+    background-color: #fff8f3;
 }
